[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/toggle/lever.png" type="Texture" id=1]
[ext_resource path="res://Sprites/toggle/toggle_base.png" type="Texture" id=2]
[ext_resource path="res://Scripts/lever.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "off"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("toggle:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 15 ), Vector2( 0, -15 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "on"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("toggle:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -15 ), Vector2( 0, 15 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 32 )

[node name="lever" type="Node2D"]
script = ExtResource( 3 )

[node name="base" type="Sprite" parent="."]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )
offset = Vector2( 1.5, 0 )

[node name="toggle" type="Sprite" parent="."]
position = Vector2( 0, -15 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/off = SubResource( 1 )
anims/on = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
